--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     src="pinguino.glb" 
     ios-src="pinguino.usdz"
     ar 
-    ar-modes="quick-look" 
+    ar-modes="webxr scene-viewer" 
     camera-controls 
     camera-orbit="auto auto auto"
     auto-rotate
