Update6 index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <model-viewer 
     src="pinguino.glb" 
-    ios-src="pinguino.usdz"
+    ios-src="pinguino.glb"
     ar 
     ar-modes="webxr scene-viewer" 
     camera-controls 
