Update7 index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     src="pinguino.glb" 
     ios-src="pinguino.glb"
     ar 
-    ar-modes="webxr scene-viewer" 
+    ar-modes="webxr scene-viewer quick-look"
     camera-controls 
     camera-orbit="auto auto auto"
     auto-rotate
