--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <model-viewer 
-    src="pinguino.glb" 
+    src="pinguino2.glb" 
     ar 
     ar-modes="webxr scene-viewer quick-look"
     camera-controls 
